ensure that the max width of the panel wrap can never exceed the max width of the viewport

--- a/delegates/dom/src/assets/css/player.css
+++ b/delegates/dom/src/assets/css/player.css
@@ -194,6 +194,7 @@ object {
 	right: 0;
 	height: 100%;
 	min-width: 20vw;
+	max-width: 100vw;
 	transform: translateX(100%);
 	transition: .3s ease-out;
 	pointer-events: all;
